--- a/WarehelperAPI/WarehelperAPI/Data/docker-compose.yml
+++ b/WarehelperAPI/WarehelperAPI/Data/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: mysql:8.0
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: "drakonas321"
+      MYSQL_ROOT_PASSWORD: "test"
     ports:
       - "3306:3306"
