--- a/WarehelperAPI/reactclient/package.json
+++ b/WarehelperAPI/reactclient/package.json
@@ -7,18 +7,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "cross-env": "^7.0.3",
-    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.69.5",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.69.5"
   },
   "scripts": {
     "start": "react-scripts start",
