--- a/WarehelperAPI/reactclient/package.json
+++ b/WarehelperAPI/reactclient/package.json
@@ -16,8 +16,8 @@
     "sass": "^1.69.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false && react-scripts build",
+    "start": "export NODE_ENV=production &&  react-scripts start",
+    "build": "export NODE_ENV=production && CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
