--- a/WarehelperAPI/reactclient/package.json
+++ b/WarehelperAPI/reactclient/package.json
@@ -8,7 +8,6 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "bootstrap": "^5.3.2",
-    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
@@ -16,8 +15,8 @@
     "sass": "^1.69.5"
   },
   "scripts": {
-    "start": "export NODE_ENV=production &&  react-scripts start",
-    "build": "export NODE_ENV=production && CI=false && react-scripts build",
+    "start": "cross-env NODE_ENV=production && react-scripts start",
+    "build": "cross-env NODE_ENV=production && CI=false && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
